<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
   
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp" >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:gravity="center" >

            <TextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="22dp"
                android:textStyle="bold"
                android:padding="20dp"
                 />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/newMatchBtn"
                android:width="30dp"
                android:text="@string/button_new_match" />
        </TableRow>

        <TableRow
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"  >

            <Button
                android:id="@+id/manageTeamsBtn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_manage_team" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"  >

            <Button
                android:id="@+id/managePlayersBtn"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/button_manage_players" />
        </TableRow>
            
        
    </TableLayout>

        
           
</LinearLayout>


 