<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/gramado2" >
    <TableRow
        android:layout_marginTop="40dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/playerNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>

    <TableRow >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone"
            android:textColor="#ffffff" />

        <EditText
            android:id="@+id/playerContactField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="phone" >
        </EditText>
    </TableRow>

    <TableRow >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_team"
            android:textColor="#ffffff" />

        <Spinner
            android:id="@+id/teamFieldSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </TableRow>

    

</TableLayout>