<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:paddingLeft="5dp" android:paddingRight="5dp" android:id="@+id/matchTableLayout">

	<TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView android:id="@+id/playerName" android:layout_width="wrap_content"
			android:layout_height="wrap_content"  />
	</TableRow>

	<TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView android:id="@+id/text3" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:paddingRight="130dp"
			android:text="@string/label_fouls" />

		<org.cesar.fmsl.utils.NumberPicker
			android:id="@+id/faultsNP" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignLeft="@+id/SpinMeasure"
			android:layout_alignParentTop="true" android:layout_toRightOf="@+id/RateTitle"
			defaultValue="0" android:gravity="center" maxValue="99" minValue="0"
			plusminus_width="50" repeatAcceleration="10" textSize="20"
			textarea_width="75" vertical="false" />
	</TableRow>

	<TableRow android:id="@+id/tableRow7" android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView android:id="@+id/text4" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/label_goals" />

		<org.cesar.fmsl.utils.NumberPicker
			android:id="@+id/goalsNP" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignLeft="@+id/SpinMeasure"
			android:layout_alignParentTop="true" android:layout_toRightOf="@+id/RateTitle"
			defaultValue="0" android:gravity="center" maxValue="99" minValue="0"
			plusminus_width="50" repeatAcceleration="10" textSize="20"
			textarea_width="75" vertical="false" />
	</TableRow>

	<TableRow android:id="@+id/tableRow8" android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView android:id="@+id/text5" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/label_goal_shoot" />

		<org.cesar.fmsl.utils.NumberPicker
			android:id="@+id/goalShootNP" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignLeft="@+id/SpinMeasure"
			android:layout_alignParentTop="true" android:layout_toRightOf="@+id/RateTitle"
			defaultValue="0" android:gravity="center" maxValue="99" minValue="0"
			plusminus_width="50" repeatAcceleration="10" textSize="20"
			textarea_width="75" vertical="false" />
	</TableRow>

	<TableRow android:id="@+id/tableRow9" android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView android:id="@+id/text6" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/label_red_card" />

		<org.cesar.fmsl.utils.NumberPicker
			android:id="@+id/redCardNP" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignLeft="@+id/SpinMeasure"
			android:layout_alignParentTop="true" android:layout_toRightOf="@+id/RateTitle"
			defaultValue="0" android:gravity="center" maxValue="1" minValue="0"
			plusminus_width="50" repeatAcceleration="10" textSize="20"
			textarea_width="75" vertical="false" />
	</TableRow>

	<TableRow android:id="@+id/tableRow9" android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView android:id="@+id/text7" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/label_yellow_card" />

		<org.cesar.fmsl.utils.NumberPicker
			android:id="@+id/yellowCardNP" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignLeft="@+id/SpinMeasure"
			android:layout_alignParentTop="true" android:layout_toRightOf="@+id/RateTitle"
			defaultValue="0" android:gravity="center" maxValue="2" minValue="0"
			plusminus_width="50" repeatAcceleration="10" textSize="20"
			textarea_width="75" vertical="false" />
	</TableRow>

	<TableRow android:id="@+id/tableRow10" android:layout_width="wrap_content"
		android:layout_height="wrap_content">

		<TextView android:id="@+id/text8" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/label_assists" />

		<org.cesar.fmsl.utils.NumberPicker
			android:id="@+id/assistsNP" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignLeft="@+id/SpinMeasure"
			android:layout_alignParentTop="true" android:layout_toRightOf="@+id/RateTitle"
			defaultValue="0" android:gravity="center" maxValue="99" minValue="0"
			plusminus_width="50" repeatAcceleration="10" textSize="20"
			textarea_width="75" vertical="false" />
	</TableRow>
</TableLayout>